# datascience-analytics-platform

./: .claude-config.yaml  .gitignore  BMAD_MCP_IMPLEMENTATION_RESEARCH_REPORT.md  CLAUDE.md  COMPLETION_FRAUD_PREVENTION_FRAMEWORK.md  DELIVERY_CHECKLIST.md  FINAL_DELIVERY_README.md  FINAL_WORKING_DEMO.py  GITHUB_SUCCESS.md  LICENSE  MANIFEST.in  ML_IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QVF_PLATFORM_DESIGN_SYSTEM_AUDIT_2025-08-08.md  QVF_PLATFORM_FRAUD_PREVENTION_ACTION_PLAN.md  QVF_PLATFORM_HANDOFF_PROMPT.md  QVF_UI_REDESIGN_SUMMARY.md  README.md  README_DASHBOARD.md  README_ORCHESTRATOR.md  SETUP_INSTRUCTIONS.md  STORY_1_2_COMPLETION_SUMMARY.md  STORY_2.3_IMPLEMENTATION_SUMMARY.md  create_comprehensive_dashboard.py  demo_complete_system.py  demo_dashboard.py  demo_integrated_semantic_ado.py  ds-analyze  ds-dashboard  dsplatform  example_pipeline.py  pyproject.toml  pytest.ini  requirements-ado.txt  requirements-dev.txt  requirements-nlp.txt  requirements.txt  requirements_ml.txt  setup.py  (+5 more)
.bmad-core/: completion-enforcement-feature-request.md  core-config-enhanced.yaml  install-manifest.yaml
.bmad-core/agents/: completion-enforcer.md  dev.md
.bmad-core/checklists/: outcome-verification.md
.bmad-core/guides/: completion-enforcement-guide.md
.bmad-core/tasks/: rejection-report.md  verify-epic.md  verify-story.md
.bmad-core/templates/: story-templ.md
.claude/: CHANGES.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  VERSION  agent-capabilities-documentation.md  global-so-template.md  package.json  settings.json.backup-20250722_161809  settings.json.backup-20250722_165058  setup-shadcn-mcp.md
.claude/analytics/: tool_metrics_20250729.jsonl  (+9 more)
.cursor/: ui.mdc
demos/: demo_ado_analysis.py  demo_explainable_scoring.py  demo_generative_dashboard.py  demo_intelligent_qa.py  demo_mle_star.py  demo_relationship_extraction.py  demo_semantic_ado.py  demo_simple.py  example_dashboard.py  example_ml_usage.py  qvf_admin_demo.py  run_tests.py  simple_qvf_admin_demo.py  streamlit_ado_semantic.py  test_ado_quick.py  test_dashboard.py  test_dashboard_simple.py  test_mle_star_quick.py  test_nlp_comprehensive.py  test_nlp_demo.py
docs/: ADO_ENHANCEMENT_ROADMAP.md  ADO_IMPLEMENTATION_SUMMARY.md  ADO_SEMANTIC_ARCHITECTURE.md  CLAUDE-REFERENCE.md  IMPLEMENTATION_SUMMARY.md  Implementation-Plan.md  PRD-DataScience-Analytics-Platform.md  PROJECT_STRUCTURE.md  Technical-Architecture-Specification.md  architecture.md  components-ado-semantic.md  nlp-enhancement-plan.md
examples/: CLAUDE.md  demo_enhanced_ahp_qvf.py  demo_qvf_ai_enhancement.py  nlp_enhancement_demo.py  qvf_field_manager_example.py  test_qvf_deployment.py
qvf-platform/: .env.example  .gitignore  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  BACKEND_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCKER_README.md  DRAG_DROP_IMPLEMENTATION_SUMMARY.md  E2E_TEST_README.md  E2E_TEST_RECOVERY_REPORT.md  E2E_TEST_RESULTS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS_REPORT.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MOBILE_NAVIGATION_IMPLEMENTATION.md  Makefile  PERFORMANCE_OPTIMIZATION_GUIDE.md  QUALITY_ACTION_PLAN.md  QVF_EXPORT_IMPLEMENTATION_COMPLETE.md  QVF_PLATFORM_100_PERCENT_COMPLETION_CERTIFICATE.md  QVF_PLATFORM_QUALITY_VERIFICATION_REPORT.md  README-SCREENSHOTS.md  UI_INSPECTION_REPORT.md  capture-screenshots.js  docker-compose.dev.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  start_api.py  test-frontend-integration.py  test-new-features.py  verify-drag-drop.js  verify_complete_system.py  verify_implementation.py
qvf-platform/apps/api/: .dockerignore  Dockerfile  demo_auth.py  pyproject.toml  requirements.txt  test_auth.py  test_auth_basic.py
qvf-platform/apps/api/src/qvf_api/: __init__.py  auth.py  config.py  database.py  init_db.py  main.py
qvf-platform/apps/api/src/qvf_api/models/: __init__.py  auth_models.py  qvf_models.py
qvf-platform/apps/api/src/qvf_api/routers/: auth.py  qvf_scoring.py  work_items.py
qvf-platform/apps/api/src/qvf_api/services/: __init__.py  qvf_service.py  qvf_service_fixed.py
scripts/: CLAUDE.md  deploy_qvf.py  quick_install.sh  setup_and_test.py  verify_installation.py  verify_qvf_deployment.py
tests/: __init__.py  conftest.py  test_enhanced_ahp.py  test_qvf_integration.py
(+454 files in other folders)
