[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "datascience-platform"
version = "2.0.0"
description = "ML-powered analytics platform with NLP enhancement"
authors = [{name = "DataScience Platform Team", email = "team@dsplatform.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["machine learning", "nlp", "analytics", "dashboard", "data science"]

[project.urls]
Homepage = "https://github.com/yourusername/ds-package"
Documentation = "https://github.com/yourusername/ds-package/wiki"
Repository = "https://github.com/yourusername/ds-package"
Issues = "https://github.com/yourusername/ds-package/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
