[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qvf-api"
version = "0.1.0"
description = "QVF Platform API"
authors = [
    {name = "QVF Team", email = "team@qvf.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "pytest-asyncio>=0.21.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
]

[project.scripts]
qvf-api = "qvf_api.main:app"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true